Add skeleton abstraction infrastructure for filesystem operations that interact with the Windows API.

--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Source\ApiWindows.cpp" />
     <ClCompile Include="Source\Configuration.cpp" />
     <ClCompile Include="Source\FilesystemDirector.cpp" />
+    <ClCompile Include="Source\FilesystemOperations.cpp" />
     <ClCompile Include="Source\FilesystemRule.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
     <ClCompile Include="Source\HookModuleMain.cpp" />
@@ -133,6 +134,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindows.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Configuration.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemOperations.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Globals.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
