--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Source\ApiWindows.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\FilesystemOperations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources\Pathwinder.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemOperations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
