--- a/PathwinderTest.vcxproj.filters
+++ b/PathwinderTest.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Test\MockFilesystemOperations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Test\Harness.h">
@@ -93,6 +96,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemOperations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Test\MockFilesystemOperations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
