--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Source\FilesystemOperations.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\FilesystemDirectorBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources\Pathwinder.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\Pathwinder\Internal\PrefixIndex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirectorBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
