--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Source\Test\Case\FilesystemDirectorBuilderTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemDirectorTest.cpp" />
     <ClCompile Include="Source\Test\Case\FilesystemRuleTest.cpp" />
+    <ClCompile Include="Source\Test\Case\PathwinderConfigReaderTest.cpp" />
     <ClCompile Include="Source\Test\Case\PrefixIndexTest.cpp" />
     <ClCompile Include="Source\Test\Case\ResolverTest.cpp" />
     <ClCompile Include="Source\Test\Case\StringsTest.cpp" />
