Create infrastructure for setting Hookshot hooks and implement the first three hook functions.

--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -125,6 +125,9 @@
     <ClCompile Include="Source\FilesystemRule.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
     <ClCompile Include="Source\HookModuleMain.cpp" />
+    <ClCompile Include="Source\Hooks\CreateFile2.cpp" />
+    <ClCompile Include="Source\Hooks\CreateFileA.cpp" />
+    <ClCompile Include="Source\Hooks\CreateFileW.cpp" />
     <ClCompile Include="Source\Message.cpp" />
     <ClCompile Include="Source\PathwinderConfigReader.cpp" />
     <ClCompile Include="Source\Resolver.cpp" />
@@ -140,6 +143,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemOperations.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Globals.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\Hooks.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PathwinderConfigReader.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PrefixIndex.h" />
