--- a/PathwinderTest.props
+++ b/PathwinderTest.props
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Label="UserMacros">
+    <ThirdPartyNeedsXstdBitSet>yes</ThirdPartyNeedsXstdBitSet>
+  </PropertyGroup>
   <ImportGroup Label="PropertySheets">
     <Import Project="$(SolutionDir)Properties\$(SolutionName).props" />
   </ImportGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
+  <ItemGroup>
+    <BuildMacro Include="ThirdPartyNeedsXstdBitSet">
+      <Value>$(ThirdPartyNeedsXstdBitSet)</Value>
+    </BuildMacro>
+  </ItemGroup>
 </Project>
