--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClInclude Include="Include\Pathwinder\Internal\ApiBitSet.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindows.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\ApiWindowsInternal.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Configuration.h" />
     <ClInclude Include="Include\Pathwinder\Internal\DebugAssert.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h" />
