Resolve an issue with file pattern matching failing due to a lack of null-termination.

--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -118,6 +118,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\ApiWindows.cpp" />
+    <ClCompile Include="Source\ApiWindowsInternal.cpp" />
     <ClCompile Include="Source\Configuration.cpp" />
     <ClCompile Include="Source\FilesystemDirector.cpp" />
     <ClCompile Include="Source\FilesystemDirectorBuilder.cpp" />
