--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Source\Hooks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ApiWindowsInternal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources\Pathwinder.h">
