--- a/Pathwinder.vcxproj.filters
+++ b/Pathwinder.vcxproj.filters
@@ -134,6 +134,9 @@
     <ClInclude Include="Include\Pathwinder\Internal\InProgressDirectoryEnumeration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Include\Pathwinder\Internal\BufferPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources\Pathwinder.rc">
