--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -116,10 +116,12 @@
     <ClCompile Include="Source\ApiWindows.cpp" />
     <ClCompile Include="Source\ApiWindowsInternal.cpp" />
     <ClCompile Include="Source\Configuration.cpp" />
+    <ClCompile Include="Source\FileInformationStruct.cpp" />
     <ClCompile Include="Source\FilesystemDirectorBuilder.cpp" />
     <ClCompile Include="Source\FilesystemRule.cpp" />
     <ClCompile Include="Source\FilesystemDirector.cpp" />
     <ClCompile Include="Source\Globals.cpp" />
+    <ClCompile Include="Source\InProgressDirectoryEnumeration.cpp" />
     <ClCompile Include="Source\Message.cpp" />
     <ClCompile Include="Source\PathwinderConfigReader.cpp" />
     <ClCompile Include="Source\Resolver.cpp" />
@@ -141,14 +143,17 @@
     <ClInclude Include="Include\Pathwinder\Internal\ApiBitSet.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindows.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ApiWindowsInternal.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\BufferPool.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Configuration.h" />
     <ClInclude Include="Include\Pathwinder\Internal\DebugAssert.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\FileInformationStruct.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirectorBuilder.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemInstruction.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemOperations.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemRule.h" />
     <ClInclude Include="Include\Pathwinder\Internal\FilesystemDirector.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Globals.h" />
+    <ClInclude Include="Include\Pathwinder\Internal\InProgressDirectoryEnumeration.h" />
     <ClInclude Include="Include\Pathwinder\Internal\Message.h" />
     <ClInclude Include="Include\Pathwinder\Internal\MutexWrapper.h" />
     <ClInclude Include="Include\Pathwinder\Internal\PathwinderConfigReader.h" />
