--- a/PathwinderTest.vcxproj
+++ b/PathwinderTest.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Source\Test\Case\ResolverTest.cpp" />
     <ClCompile Include="Source\Test\Case\StringsTest.cpp" />
     <ClCompile Include="Source\Test\Harness.cpp" />
+    <ClCompile Include="Source\Test\MockDirectoryOperationQueue.cpp" />
     <ClCompile Include="Source\Test\MockFilesystemOperations.cpp" />
     <ClCompile Include="Source\Test\TestCase.cpp" />
     <ClCompile Include="Source\Test\Utilities.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Include\Pathwinder\Internal\TemporaryBuffer.h" />
     <ClInclude Include="Include\Pathwinder\Internal\ValueOrError.h" />
     <ClInclude Include="Include\Pathwinder\Test\Harness.h" />
+    <ClInclude Include="Include\Pathwinder\Test\MockDirectoryOperationQueue.h" />
     <ClInclude Include="Include\Pathwinder\Test\MockFilesystemOperations.h" />
     <ClInclude Include="Include\Pathwinder\Test\MockFreeFunctionContext.h" />
     <ClInclude Include="Include\Pathwinder\Test\TestCase.h" />
